<resources>
    <string name="app_name">BarcodeScanner</string>
    <string name="enable_flashlight_key">enable_flashlight_key</string>
    <string name="vibration_key">vibration_key</string>
    <string name="open_content_key">open_content_key</string>
    <string name="copy_to_clipboard_key">copy_to_clipboard_key</string>
    <string name="scan_manually_key">scan_manually_key</string>
    <string name="search_engine_key">search_engine_key</string>
    <string name="clear_history_key">clear_history_key</string>
    <string name="rate_us_key">rate_us_key</string>



    <string name="admob_app_id">ca-app-pub-5715355618008315~6069374232</string>
    <string name="banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_test_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rewarded_test_id">ca-app-pub-3940256099942544/5224354917</string>
</resources>